# heddle

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASING.md  codecov.yml  deny.toml  package-lock.json  publish-0.2.0-resume.sh  publish-0.2.0.sh  release-plz.toml  rust-toolchain.toml  skills-lock.json
crates/cli/: Cargo.toml  README.md
crates/cli-macro-poc/: Cargo.toml
crates/cli-macro-poc/src/: args.rs  custom_path.rs  lib.rs  output.rs  schemars_path.rs
crates/cli-macro-poc/tests/: measure.rs
crates/cli-shared/: Cargo.toml
crates/cli-shared/src/: client_command.rs  client_config.rs  lib.rs  output.rs
crates/cli/benches/: clonefile_threads.rs  local_ops.rs
crates/cli/examples/: gen_ts_types.rs
crates/cli/src/: attribution.rs  bench.rs  exit.rs  extensions.rs  hosted_failure.rs  hosted_typed_error.rs  lib.rs  main.rs  object_graph_tests.rs  operation_id.rs  perf.rs  ts_codegen.rs
crates/cli/tests/: advice_lint.rs  agent_api_schema.rs  auth_login.rs  cli_integration.rs  clone_no_git.rs  commit_conformance.rs  comprehensive.rs  concurrent_access.rs  conflict_resolution.rs  core_functionality.rs  formal_specs.rs  git_bridge_integration.rs  git_overlay_sley_remote.rs  git_process_lint.rs  git_projection_engine_integration.rs  idempotency_lint.rs  import_perf_harness.rs  lazy_blob_hydration_kernel.rs  multi_agent_worktrees.rs  onboarding_contract.rs  op_id_coverage.rs  performance.rs  presence_publish.rs  production_features.rs  render_lint.rs  roundtrip_fidelity.rs  semantic_diff_integration.rs  serve_local.rs  stack_rebase.rs  state_management.rs  tier_coverage.rs  ts_types_in_sync.rs  typed_error_lint.rs
crates/client/: Cargo.toml
crates/client/src/: auth_args.rs  auth_cmd.rs  auth_requests.rs  credential_file.rs  credentials.rs  device_flow.rs  lib.rs  presence.rs  support.rs  support_args.rs  support_requests.rs  whoami.rs
crates/core/: Cargo.toml
crates/core/src/: actor.rs  agent_fanout.rs  agent_ops.rs  approval_plan.rs  cherry_pick_plan.rs  clean_plan.rs  clone_plan.rs  collapse_plan.rs  completion_plan.rs  context.rs  context_plan.rs  contract.rs  daemon_plan.rs  diagnose_plan.rs  doctor_docs_plan.rs  doctor_plan.rs  doctor_schemas_plan.rs  gc_plan.rs  git_projection_io_plan.rs  harness_json.rs  harness_policy.rs  hook_plan.rs  index_plan.rs  init_plan.rs  integration_plan.rs  lib.rs  log_plan.rs  maintenance_plan.rs  marker_plan.rs  monitor_plan.rs  onboarding.rs  oplog_plan.rs  oss_plan.rs  prove_plan.rs  purge_plan.rs  query.rs  rebase_plan.rs  redact_plan.rs  remote.rs  resolve_plan.rs  (+23 more)
crates/crypto/: Cargo.toml
crates/crypto/src/: behavior_tests.rs  ed25519.rs  error.rs  lib.rs  p256.rs  pem_loader.rs  pop.rs  rsa.rs  state_signature.rs  state_signing.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  local_daemon.rs  transaction_replay.rs
crates/devtools/: Cargo.toml  README.md
crates/devtools/src/: asserter.rs  audit_grpc_contract.rs  check_atomic_ledger_encapsulation.rs  check_no_silent_default_tree_load.rs  check_oprecord_exhaustiveness.rs  check_snapshot_atomicity.rs  check_verification_owner.rs  fuse_dispatch_bench.rs  main.rs
crates/format/: Cargo.toml
crates/format/src/: lib.rs
crates/git-projection/: Cargo.toml
crates/git-projection/src/: credential.rs  git_core.rs  git_export.rs  git_ingest.rs  git_mapping.rs  git_notes.rs  git_reconstruct.rs  git_residual.rs  git_sync.rs  git_util.rs  lib.rs  test_support.rs
crates/git-substrate/: Cargo.toml
crates/git-substrate/src/: copy.rs  framing.rs  gix_interop.rs  id.rs  index.rs  kind.rs  lib.rs  object.rs  refs.rs  remote.rs  repo.rs  transport.rs  worktree.rs  write.rs
crates/grpc/: Cargo.toml  build.rs
crates/grpc/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: git_walk.rs  import_options.rs  importer.rs  lib.rs  oplog_emit.rs  overlay_history.rs  reasoning.rs  reasoning_emit.rs  reasoning_extract.rs  reasoning_pipeline.rs  ref_emit.rs  semantic_cache.rs  sha_map.rs  state_writer.rs  tree_translate.rs
crates/ingest/tests/: extract_real_reasoning.rs  match_real_sessions.rs
crates/merge/: Cargo.toml
crates/merge/src/: diff3.rs  lib.rs  lines.rs  markers.rs  preflight.rs  tests.rs  whitespace.rs
crates/mount/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/mount/benches/: fuse_e2e.rs  fuse_e2e_baseline.json  fuse_worker_ipc.rs  mount_read_paths.rs
crates/mount/proptest-regressions/: tests.txt
crates/mount/src/: cache.rs  core.rs  error.rs  fuse.rs  lib.rs  nfs.rs  pending.rs  projfs.rs  shell.rs  tests.rs  worker.rs
crates/mount/tests/: cargo_build_smoke.rs  feature_combos.rs  fskit_smoke.rs  fuse_mount.rs  fuse_worker_crash.rs  fuse_worker_resource_cleanup.rs  nfs_smoke.rs  pending_fsm_proptest.rs  projfs_smoke.rs
crates/objects/: Cargo.toml
crates/objects/benches/: compression.rs  delta.rs  hashing.rs  pack_io.rs  tree_diff.rs
crates/objects/src/: delta.rs  error.rs  fault_inject.rs  fs_atomic.rs  fs_clone.rs  fs_ops.rs  legacy.rs  lib.rs  lock.rs  observe.rs  progress.rs  sync.rs
crates/objects/tests/: fault_inject_panic.rs
crates/oplog/: Cargo.toml
crates/oplog/benches/: oplog_io.rs
crates/oplog/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: auth_context.rs  auth_tests.rs  auth_token.rs  capabilities.rs  lib.rs  message_auth.rs  message_delta.rs  message_hosted.rs  message_objects.rs  message_pushpull.rs  message_refs.rs  message_status.rs  native_pack.rs  object_availability.rs  object_graph.rs  object_transfer.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/refs/: Cargo.toml
crates/refs/benches/: reftable_vs_packed.rs
crates/refs/src/: fs_atomic.rs  lib.rs
crates/repo/: Cargo.toml
crates/review/: Cargo.toml
crates/runtime-bridge/: Cargo.toml
crates/schema/: Cargo.toml
crates/semantic/: Cargo.toml
crates/state_review/: Cargo.toml
crates/weft-client-shim/: Cargo.toml
experiments/iroh-transport/: BENCHMARK.md  Cargo.toml  FEATURE_ANALYSIS.md  README.md
(+1149 files in other folders)
