[workspace]
members = [
    "crates/cli",
    "crates/cli-macro-poc",
    "crates/cli-shared",
    "crates/client",
    "crates/crypto",
    "crates/daemon",
    "crates/devtools",
    "crates/git-substrate",
    "crates/grpc",
    "crates/ingest",
    "crates/merge",
    "crates/mount",
    "crates/objects",
    "crates/oplog",
    "crates/proto",
    "crates/refs",
    "crates/repo",
    "crates/review",
    "crates/runtime-bridge",
    "crates/semantic",
    "crates/state_review",
    "crates/weft-client-shim",
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Luke"]
description = "An AI-native version control system"
license = "Apache-2.0"
repository = "https://github.com/HeddleCo/heddle"
keywords = ["vcs", "version-control", "ai", "git"]
categories = ["development-tools"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
aws-sdk-s3 = { version = "1.129", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-smithy-async = { version = "1", features = ["rt-tokio"] }
base32 = "0.5"
base64 = "0.22"
biscuit-auth = "6"
blake3 = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
ed25519-dalek = { version = "2", features = ["pem", "rand_core"] }
fs2 = "0.4.3"
futures = "0.3"
gix = { version = "=0.84.0", default-features = false, features = ["sha1", "revision", "tree-editor", "blocking-network-client", "blocking-http-transport-reqwest-rust-tls"] }
hex = "0.4"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
ignore = "0.4"
libc = "0.2"
lru = "0.18"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
memmap2 = "0.9"
notify = "8"
ntest = "0.9"
proptest = "1"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
prost = "0.14"
prost-types = "0.14"
protoc-bin-vendored = "3"
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry_sdk = "0.32"
rand = "0.10"
regex-lite = "0.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider"] }
rmp-serde = "1"
rsa = { version = "0.9", features = ["pem"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
s3s = "0.13.0"
s3s-fs = "0.13.0"
schemars = { version = "1.2", features = ["chrono04"] }
sec1 = { version = "0.8", features = ["pem"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serial_test = "3"
sley-core = { path = "../sley/crates/sley-core" }
sley-config = { path = "../sley/crates/sley-config" }
sley-fetch = { path = "../sley/crates/sley-fetch" }
sley-formats = { path = "../sley/crates/sley-formats" }
sley-index = { path = "../sley/crates/sley-index" }
sley-notes = { path = "../sley/crates/sley-notes" }
sley-object = { path = "../sley/crates/sley-object" }
sley-odb = { path = "../sley/crates/sley-odb" }
sley-pack = { path = "../sley/crates/sley-pack" }
sley-protocol = { path = "../sley/crates/sley-protocol" }
sley-remote = { path = "../sley/crates/sley-remote" }
sley-refs = { path = "../sley/crates/sley-refs" }
sley-rev = { path = "../sley/crates/sley-rev" }
sley-transport = { path = "../sley/crates/sley-transport" }
sley-worktree = { path = "../sley/crates/sley-worktree" }
sha2 = { version = "0.10", features = ["oid"] }
similar = "3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
    "rt",          # current_thread runtime
    "macros",      # #[tokio::main], select!, pin!, join!
    "net",         # Unix sockets for daemon/agent
    "signal",      # ctrl_c for daemon shutdown
    "sync",        # mpsc channels
    "time",        # sleep, timeout
    "io-util",     # AsyncReadExt / AsyncWriteExt
    "process",     # tokio::process for harness subprocesses
    "fs",          # async filesystem ops in some daemons
    "rt-multi-thread", # hosted daemon binary uses multi-thread runtime
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
toml = "1.1"
tonic = { version = "0.14", features = ["transport", "tls-webpki-roots"] }
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
walkdir = "2"
windows-sys = "0.61"
zstd = "0.13"
gix-transport = { version = "0.57", features = ["http-client-insecure-credentials"] }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1
strip = true
