[workspace]
members = [
    "crates/cli",
    "crates/cli-macro-poc",
    "crates/cli-shared",
    "crates/client",
    "crates/crypto",
    "crates/daemon",
    "crates/devtools",
    "crates/grpc",
    "crates/ingest",
    "crates/merge",
    "crates/mount",
    "crates/format",
    "crates/objects",
    "crates/oplog",
    "crates/wire",
    "crates/refs",
    "crates/repo",
    "crates/review",
    "crates/runtime-bridge",
    "crates/schema",
    "crates/semantic",
    "crates/state_review",
    "crates/weft-client-shim",
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Luke"]
description = "An AI-native version control system"
license = "Apache-2.0"
repository = "https://github.com/HeddleCo/heddle"
keywords = ["vcs", "version-control", "ai", "git"]
categories = ["development-tools"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base32 = "0.5"
base64 = "0.22"
biscuit-auth = "6"
blake3 = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
ed25519-dalek = { version = "2", features = ["pem", "rand_core"] }
fs2 = "0.4.3"
futures = "0.3"
sley = { version = "0.1.0", features = ["mmap", "fast-sha1"] }
hex = "0.4"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
ignore = "0.4"
libc = "0.2"
lru = "0.18"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
memmap2 = "0.9"
notify = "8"
ntest = "0.9"
proptest = "1"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
pkcs8 = { version = "0.10", features = ["pem", "encryption"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
prost = "0.14"
prost-types = "0.14"
protoc-bin-vendored = "3"
opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry_sdk = "0.32"
rand = "0.10"
regex-lite = "0.1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider"] }
rmp-serde = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rsa = { version = "0.9", features = ["pem"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
schemars = { version = "1.2", features = ["chrono04"] }
sec1 = { version = "0.8", features = ["pem"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serial_test = "3"
sha2 = { version = "0.10", features = ["oid"] }
similar = "3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
tempfile = "3"
thiserror = "2"
# Tokio is centralized here so optional crate opt-ins cannot resolve a
# weaker runtime than the CLI-level feature union needs. Member crates
# should use `tokio.workspace = true` (or `dep:tokio` for optional
# features) and only add local Tokio features when a new actual API need
# is not already covered by this baseline.
tokio = { version = "1", default-features = false, features = [
    "rt",          # current_thread runtime
    "macros",      # #[tokio::main], select!, pin!, join!
    "net",         # Unix sockets for daemon/agent
    "signal",      # ctrl_c for daemon shutdown
    "sync",        # mpsc channels
    "time",        # sleep, timeout
    "io-util",     # AsyncReadExt / AsyncWriteExt
    "process",     # tokio::process for harness subprocesses
    "fs",          # async filesystem ops in some daemons
    "rt-multi-thread", # hosted daemon binary uses multi-thread runtime
] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
toml = "1.1"
tonic = { version = "0.14", features = ["transport", "tls-webpki-roots"] }
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
walkdir = "2"
windows-sys = "0.61"
zstd = "0.13"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1
strip = true
