# Spike PoC for heddle#327 — CLI schema-macro shape exploration.
#
# THROWAWAY. This crate exists only to measure the schemars-vs-custom-emitter
# tradeoff for the spike. heddle#205 (land `crates/cli-macro/`) deletes this
# crate when it lands the production proc-macro. It is intentionally NOT wired
# into `crates/cli` — it shadows ONE verb (`init`) in isolation so the two
# schema-generation paths can be diffed side by side.
[package]
name = "heddle-cli-macro-poc"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Spike PoC (heddle#327): schemars vs custom JSON-schema emitter for one CLI verb. Deleted by heddle#205."

[dependencies]
clap = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
